mcp-gateway/resources/mcpserver-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp-gateway-to-server
  namespace: openshift-mcp-server
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: mcp-gateway
    namespace: openshift-mcp-gateway
    sectionName: https
  hostnames:
  - openshift-mcp.apps.ipi.aws.joshgav.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /mcp
    backendRefs:
    - name: openshift-mcp-server-redhat-openshift-mcp-server
      port: 8080
